# minetest

./: CMakeLists.txt  minetest.conf.example  mk.sh
builtin/: init.lua
builtin/common/: db.lua
builtin/game/: auth.lua
builtin/mainmenu/: init.lua  tab_demo.lua
cmake/Modules/: FindHiredis.cmake
lib/hiredis/: CMakeLists.txt
lib/hiredis/hiredis/: CMakeLists.txt
src/: CMakeLists.txt  database-redis.cpp  database-redis.h
src/database/: database-redis.h
src/script/: scripting_server.cpp
src/script/lua_api/: CMakeLists.txt  l_database.cpp  l_database.h
